--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -34,5 +34,9 @@
   "bugs": {
     "url": "https://github.com/vickykumarcse/Data-Structures-Using-Javascript/issues"
   },
-  "homepage": "https://github.com/vickykumarcse/Data-Structures-Using-Javascript#readme"
+  "homepage": "https://github.com/vickykumarcse/Data-Structures-Using-Javascript#readme",
+  "devDependencies": {
+    "@babel/preset-env": "^7.7.7",
+    "jest": "^24.9.0"
+  }
 }
